Fixes account dropdown on tablets [fixes #157477995]

--- a/app/assets/stylesheets/spree/frontend/_mobile_navbar.sass
+++ b/app/assets/stylesheets/spree/frontend/_mobile_navbar.sass
@@ -126,6 +126,14 @@
     .link-to-account a.dropdown-toggle
       font-size: 10px
 
+    .navbar-nav .open .dropdown-menu
+      background: #fff
+      position: absolute
+
+    .link-to-account.open .dropdown-menu
+      left: auto
+      right: 0
+
   .keyword-suggestions
     -webkit-overflow-scrolling: touch
 
